[package]
name = "raycaster-embedded-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = {version="0.7.1", optional=true}
embedded-hal = "0.2.7"
fugit = "0.3.6"
rp-pico = "0.5.0"
# rp2040-hal = "0.5.0"
rp2040-boot2 = {version="0.2.0", optional=true}
heapless = "0.7.15"
panic-halt = "0.2.0"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
embedded-graphics = "0.7.1"
embedded-graphics-framebuf = "0.2.0"
mipidsi = "0.3.0"
#st7789 = {version="0.7.0"}
nb = "1.0.0"
display-interface-spi = "0.4.1"
pimoroni-picosystem = {path = "../embedded/picosystem-rs"}
tinyrand = "0.4.0"
micromath = "2.0.0"

[dev-dependencies]


[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp-pico/rt"]
